remove deprecated useWorkspaces option

--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,5 @@
 {
     "packages": ["packages/*", "api"],
     "version": "0.88.0",
-    "npmClient": "pnpm",
-    "useWorkspaces": true
+    "npmClient": "pnpm"
 }
